[projects-cache] - disable checks for disable platforms as no configuration at the moment. (#5)